# DnD_AI_DM

./: .gitignore  CAMPAIGN_INTEGRATION_GUIDE.md  PROJECT_REFACTOR_SUMMARY.md  README.md  ROUND_BASED_COMBAT_GUIDE.md  STORY_TREE_GUIDE.md  cli.py  conftest.py  docker-compose.yml  local_test_cicd.py  pytest.ini  test-combat.sh
.github/workflows/: ci.yml
deployment/: .gitignore  deploy-k8s-dnd-master.yml  docker-entrypoint.sh  docker-shell.sh  docker_config.json  emoji.yaml  visualizer.yaml
deployment/deploy_images/: Pulumi.dev.yaml  __main__.py
deployment/deploy_k8s/: Pulumi.dev.yaml  Pulumi.ssl.yaml  __main__.py  create_cluster.py  setup_containers.py  setup_loadbalancer.py  setup_loadbalancer_ssl.py
deployment/deploy_single_vm/: Pulumi.dev-test.yaml  Pulumi.dev.yaml  create_instance.py  provision_instance.py  setup_containers.py  setup_containers_using_command.py
deployment/nginx-conf/nginx/: nginx.conf
finetuning/: Dockerfile  README.md  cli.py  docker-entrypoint.sh  docker-shell.sh  pyproject.toml
frontend/: .dockerignore  Dockerfile
milestone3/yizhen/: README.md
milestone3/yizhen/ml-workflow/: README.md
milestone3/yizhen/ml-workflow/src/data-collector/: Dockerfile  cli.py  docker-entrypoint.sh  downloader.py  pyproject.toml
milestone3/yizhen/ml-workflow/src/data-processor/: Dockerfile  cleanser.py  cli.py  docker-entrypoint.sh  docker-shell-push.sh  docker-shell.sh  pyproject.toml
milestone3/yizhen/ml-workflow/src/model-training/: Dockerfile  cli.py  docker-entrypoint.sh  docker-shell.sh  package-trainer.sh  pyproject.toml
milestone3/yizhen/ml-workflow/src/model-training/trainer/: gemini_tuner.py  task.py
milestone3/yizhen/ml-workflow/src/workflow/: Dockerfile  cli.py  docker-entrypoint.sh  docker-shell.sh  model.py  pyproject.toml
milestone3/yizhen/src/data-collector/: Dockerfile  cli.py  docker-entrypoint.sh  docker-shell-push.sh  docker-shell.sh  pyproject.toml
milestone3/yizhen/src/data-processor/: Dockerfile  cleanser.py  cli.py  docker-entrypoint.sh  docker-shell-push.sh  docker-shell.sh  pyproject.toml
milestone3/yizhen/src/model-training/: Dockerfile  cli.py  docker-entrypoint.sh  docker-shell.sh  package-trainer.sh  pyproject.toml
milestone3/yizhen/src/model-training/trainer/: task.py
milestone3/yizhen/src/workflow/: Dockerfile  cli.py  docker-entrypoint.sh  docker-shell.sh  model.py  pyproject.toml
mlfinetuning/: .dockerignore  Dockerfile.gpu  pyproject.toml
mlfinetuning/artifacts/: eval_report.json  metrics.json  model_registry.json
mlfinetuning/artifacts/model/: config.json  model.safetensors
mlfinetuning/config/: train.yaml
mlfinetuning/data/processed/: train.jsonl  val.jsonl
mlfinetuning/scripts/: eval_offline.py  prepare_data.py  register.py  run_all.py  train_sft.py
mlfinetuning/tests/: test_container.py
src/api-service/: .gitignore  docker-shell.sh
src/api-service/api/: service.py
src/api-service/api/routers/: llm_agent_chat.py  llm_chat.py  llm_cnn_chat.py  llm_rag_chat.py  test_router.py
src/api-service/api/utils/: chat_utils.py  llm_agent_utils.py  llm_cnn_utils.py  llm_rag_utils.py  llm_utils.py
src/backend/: .gitignore  README.md  docker-shell.sh  pyproject.toml
src/backend-tmp/: Dockerfile
src/backend-tmp/api/: service.py
src/backend-tmp/api/routers/: combat.py
src/backend-tmp/api/utils/: combat_ai.py  combat_engine.py
src/backend/api/: service.py
src/backend/api/routers/: combat.py
src/backend/api/utils/: combat_ai.py  combat_engine.py  db_tool.py
src/combat_agent_refactored/: .gitignore  Dockerfile  README.md  cli.py  combat_engine.py  db_tool.py  docker-entrypoint.sh  docker-shell.sh  pyproject.toml
src/combat_agent_refactored/input/: actions.json  allies.json  enemies.json
src/finetuning/llm-finetuning/: README.md  env.dev
src/finetuning/llm-finetuning/dataset-creator/: Dockerfile  README.md  cli.py  docker-run.sh  pyproject.toml
src/finetuning/llm-finetuning/gemini-finetuner/: Dockerfile  cli.py
src/frontend-tmp/: Dockerfile  README.md  index.html  main.js  style.css
src/frontend-tmp/backend-tmp/: README.md  pyproject.toml
src/frontend-tmp/backend-tmp/api/routers/: combat.py
src/frontend/app/: page.tsx
src/frontend/app/api/game/action/: route.ts
src/frontend/app/api/game/start/: route.ts
src/frontend/app/game/: page.tsx
src/frontend/app/game/combat/: page.tsx
src/frontend/app/story-select/: page.tsx
src/frontend/components/: landing-page.tsx
src/frontend/lib/multiplayer/: event-emitter.ts  room-manager.ts  types.ts
src/frontend/lib/rag/: document-processor.ts  vector-store.ts
src/infra/: nginx.conf
src/orchestrator/: Dockerfile  README.md  app.py  campaign_loader.py  context_builder.py  game_state.py  requirements.txt  rule_validator.py  story_tree_loader.py
src/orchestrator/story_trees/: README.md  example-campaign.json
src/rag/: Dockerfile  cli.py  docker-compose.yml  docker-shell.sh
src/rag/input-datasets/books/: player_handbook.txt
src/rag/outputs/: chunks-char-split-player_handbook.jsonl  chunks-recursive-split-player_handbook.jsonl  chunks-semantic-split-player_handbook.jsonl  embeddings-semantic-split-player_handbook.jsonl
src/rule_agent/: README.md  agent_tools.py  app.py  cli.py  docker-compose.yml  docker-entrypoint.sh  docker-shell.sh  pdftotxt.py  pyproject.toml
src/rule_agent/input-datasets/books/: DnD_BasicRules_2018.txt
tests/: Dockerfile  QUICK_START.md  README.md  README_STANDALONE.md  __init__.py  conftest.py  docker-shell.sh  pyproject.toml  run-tests.sh
tests/dnd_master_tests/: __init__.py
tests/integration/: test_combat_api.py  test_orchestrator.py  test_rule_agent.py
tests/system/: test_combat_system.py  test_full_game_flow.py  test_orchestrator_api.py
tests/unit/: test_agent_tools.py  test_app_helpers.py  test_campaign_loader.py  test_combat_actions.py  test_combat_engine.py  test_context_builder.py  test_db_tool.py  test_game_state.py  test_orchestrator_endpoints.py  test_rule_agent_app.py  test_rule_agent_cli.py  test_rule_validator.py  test_semantic_splitter.py
(+5 files in other folders)
