[project]
# Basic project metadata
name = "finetuning-qlora"
version = "0.1.0"
description = "QLoRA fine-tuning container for AC215"
readme = "README.md"

# The PyTorch CUDA runtime images usually ship with Python 3.10 or 3.11.
# Do NOT require 3.12+, as bitsandbytes and torch wheels may be incompatible.
requires-python = ">=3.10,<3.13"

# Main dependencies for QLoRA fine-tuning
dependencies = [
  # --- Core Hugging Face ecosystem ---
  "transformers>=4.43.0",      # Model loading and training utilities
  "datasets>=2.19.0",          # Dataset handling (JSON/CSV/HF datasets)
  "accelerate>=0.33.0",        # Distributed and mixed-precision training
  "huggingface-hub>=0.24.0",   # Model and dataset upload/download

  # --- QLoRA essentials ---
  "bitsandbytes>=0.43.1",      # 4-bit/8-bit quantization for GPU efficiency
  "peft>=0.11.1",              # Parameter-efficient fine-tuning (LoRA/QLoRA)
  "trl>=0.9.6",                # SFTTrainer and RLHF utilities

  # --- Utilities ---
  "tqdm>=4.66.0",              # Progress bars
  "pyyaml>=6.0.1",             # YAML configuration parsing
]

[project.optional-dependencies]
# Optional dependency group for uploading artifacts to Google Cloud Storage.
gcs = ["google-cloud-storage>=2.17.0"]

# Optional dependency group for lightweight inference or API serving.
serve = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]

[tool.uv]
# Leave this section empty unless you need to customize the index mirror
# or caching strategy for uv (e.g., internal PyPI).

[tool.accelerate.config]
# Optional Accelerate configuration section.
# This can remain empty; accelerate will infer hardware automatically at runtime.
