[project]
name = "mlfinetuning"
version = "0.1.0"
description = "Simple finetuning job container for AC215 M2"
requires-python = ">=3.10"

dependencies = [
  "transformers>=4.44,<5",
  "datasets>=2.20,<3",
  "accelerate>=0.33,<1",
  "torch>=2.3",  
  "peft>=0.11,<1",
  "bitsandbytes>=0.43,<1",    
  "evaluate>=0.4,<1",
  "numpy>=1.26",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]