[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.13.0.2",
    "google-genai>=1.47.0",
    "pillow>=12.0.0",
    "tensorflow==2.19.0",
    "uvicorn>=0.34.3",
]
