[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dask>=2025.10.0",
    "difpy>=4.2.1",
    "google-cloud-storage>=3.4.1",
    "pandas>=2.3.3",
    "tensorflow==2.19.0",
]
